[tool.poetry]
name = "llmsearch"
packages = [
    { include = "llmsearch" },
]
version = "0.1.0"
description = "Find the Best Generation Params for your LLM & Dataset"
authors = ["Praful932 <praful.mohanan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
torch = ">=1.1"
transformers = "^4.27.4"
datasets = "^2.11.0"
numpy = ">=1.17"
tqdm = "^4.27"
scikit-learn = "*"
langchain = "^0.0.189"
protobuf = "*"
psutil = "*"
nvidia-ml-py3 = { version = "^7.352.0", optional = true }
beepy = { version = "^1.0.7", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pylint = "^2.17.2"
jedi = "0.17.2"
pandas = "^2.0.0"
evaluate = "^0.4.0"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"

[tool.poetry.extras]
pynvml = ["nvidia-ml-py3"]
beepy = ["beepy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
