[tool.poetry]
name = "llmsearch"
packages = [
    { include = "llmsearch" },
]
version = "0.1.0.dev1"
description = "Find the Best Generation Parameters for your LLM & Dataset"
authors = ["Praful932 <praful.mohanan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
torch = [
    { version = ">=1.1", markers = "sys_platform != 'darwin'" },
    { version = ">=2.1", markers = "sys_platform == 'darwin'" }
]
transformers = { version = "^4.27.4", extras = ["sentencepiece"] }
datasets = "^2.11.0"
numpy = ">=1.17"
tqdm = "^4.27"
scikit-learn = "^1.3"
psutil = ">=5.9"
nvidia-ml-py3 = { version = "^7.352.0", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pylint = "^2.17.2"
jedi = "0.17.2"
pandas = "^2.0.0"
evaluate = "^0.4.0"
ipykernel = "^6.29.4"
pytest = "^8.2.1"
pdoc3 = "^0.10.0"

[tool.poetry.extras]
pynvml = ["nvidia-ml-py3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
